tests/snapshots/examples_fixtures/functions__forward_reference.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/functions/forward_reference.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/functions/forward_reference.flx:43:1
   |
43 | main();
   | ^^^^^^^
   | ------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.
== stdout ==
<not executed>
